--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                   "
                 >
                   Radno vrijeme župnog ureda: <br />
-                  ponedjeljkom, srijedom, četvrtkom i petkom od 16 do 17 sati
+                  to be added!
                 </span>
               </p>
               <!-- <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;line-height:2.;"><a HREF="#" target="_self"
@@ -557,3 +557,4 @@
     </script>
   </body>
 </html>
+
