--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <a
                     style="color: white; text-decoration: underline"
                     href="mob:+385 98 967 4716"
-                    >+385 98 967 4716</a
+                    >mob:+385 98 967 4716</a
                   >
                 </span>
               </p>
@@ -146,8 +146,8 @@
                     color: rgba(255, 255, 255, 1);
                   "
                 >
-                  Radno vrijeme župnog ureda: <br />
-                  to be added!
+                  email: hrvoje.okadar@gmail.com <br />
+                  
                 </span>
               </p>
               <!-- <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;line-height:2.;"><a HREF="#" target="_self"
@@ -557,4 +557,5 @@
     </script>
   </body>
 </html>
+
 
