--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 
                         <b>ŽUPNI VJERONAUK</b><br />
                         III. razred (prvopričesnici):
-                        <b>nedjeljom u 10 h. u crkvici Majke Božje od Zdravlja na Placi</b>
+                        <b>nedjeljom u 12 h. u crkvici Majke Božje od Zdravlja na Placi</b>
                         <br />
                         <!-- IV. razred: <b>utorkom u 16 h.</b> <br />
                         V. razred: <b>utorkom u 16 h.</b> <br />
@@ -471,7 +471,7 @@
                         VIII. razred (krizmanici): <b>nedjeljom u 10 h. u crkvici Majke Božje od Zdravlja na Placi</b>
                         <br />
                         <br />
-                        KATEHEZE: <b>ponedjeljak nakon večernje mise. </b
+                        KATEHEZE: <b>ponedjeljak i četvrtak nakon večernje mise. </b
                         ><br />
                         <br />
                       </span>
@@ -557,5 +557,6 @@
     </script>
   </body>
 </html>
+
 
 
